[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["connor <connor@connomation.ca>"]
edition = "2018"
publish = false
repository = "https://github.com/c4collins/rust-by-example"
readme = "README.md"
license = "MIT"
maintenance = {status = "actively-developed"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typename = "0.1.1"