[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["connor <connor@connomation.ca>"]
edition = "2018"
publish = false
repository = "https://github.com/c4collins/rust-by-example"
readme = "README.md"
license = "MIT"
description = "Based on Rust by Example and my earlier similar projects for Python, I am writing out examples of Rust to help me learn it more thoroughly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # This is where you import compiled libraries
typename = "0.1.1"

[lib] # This is generating a library, and then it's used, not just importing it
name="rary"
path="src/a11_crates_library.rs"